--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Flowbite React Template Vite</title>
+    <title>Mint Condition Budgets</title>
   </head>
   <body class="bg-gradient-to-r from-blue-800 to-blue-400">
     <div id="root"></div>
